[metadata]
name = Flask-RDN
description = Streamline and supercharge your query string parameter parsing in Flask!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Topazoo/Flask-Request-Data-Normalizer
project_urls =
    Bug Tracker = https://github.com/Topazoo/Flask-Request-Data-Normalizer/issues
    Changelog = https://github.com/Topazoo/Flask-Request-Data-Normalizer/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
flask = Flask>=2.0.3
qsm = Query-String-Manager>=1.0.9